objects/BIN_Address_Asset_Entitlement__mdt.object
<CustomObject>
    <fields>
        <fullName>Bin_Colour__c</fullName>
        <label>Bin Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Lime Green</fullName>
                </value>
                <value>
                    <fullName>Bulky</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bin_Purpose__c</fullName>
        <label>Bin Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Garbage</fullName>
                    <default>true</default>
                    <label>Garbage</label>
                </value>
                <value>
                    <fullName>Recycling</fullName>
                </value>
                <value>
                    <fullName>Organics</fullName>
                </value>
                <value>
                    <fullName>FOGO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bin_Size__c</fullName>
        <label>Bin Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>140L</fullName>
                </value>
                <value>
                    <fullName>2000L</fullName>
                </value>
                <value>
                    <fullName>240L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bin_Type__c</fullName>
        <label>Bin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hopper</fullName>
                    <default>true</default>
                    <label>Hopper</label>
                </value>
                <value>
                    <fullName>MGB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_New_Set_Bin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will inform if this bin entitlement will be considered for delivery of New Set of bins.</description>
        <label>Is New Set Bin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Use_Code__c</fullName>
        <label>Land Use Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Use_Description__c</fullName>
        <description>This field is used for TCCS info only</description>
        <label>Land Use Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NW_Category__c</fullName>
        <description>This fields describe the category of the entitlements (Eg. SUD, MUD - KERB)</description>
        <label>NW Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUD</fullName>
                    <default>true</default>
                    <label>SUD</label>
                </value>
                <value>
                    <fullName>MUD - KERB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NW_Entitlement__c</fullName>
        <description>This field is used for TCCS info only</description>
        <label>NW Entitlement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>This is Related to Bins project.</description>
    <label>BIN Address Asset Entitlement</label>
    <pluralLabel>BIN Address Asset Entitlements</pluralLabel>
</CustomObject>